# nudge

./: .gitignore  BUGS.md  INSTALLATION.md  LEARNING.md  PROGRESS.md  QUICKSTART.md  README.md  ROADMAP.md  TWITTER_THREAD.md  pyproject.toml  requirements.txt  setup.py  test_detector_terminal_id.py
.claude/: X_THREAD_OPTIMIZER.md  claude.md
src/: __init__.py  __main__.py  cli.py  config.py  daemon.py  detector.py  notifier.py
src/daemon/: __init__.py
src/notifications/: __init__.py
src/utils/: __init__.py
